@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2018,v 1.1523 2018/03/23 17:55:38 adam Exp $
+$NetBSD: CHANGES-2018,v 1.1524 2018/03/24 06:51:43 adam Exp $
 
 Changes to the packages collection and infrastructure in 2018:
 
@@ -2064,3 +2064,6 @@ Changes to the packages collection and infrastructure in 2018:
 	Updated devel/transifex-client to 0.13.1 [taca 2018-03-23]
 	Added math/R-forecast version 8.2 [minskim 2018-03-23]
 	Updated multimedia/libdvdcss to 1.4.2 [adam 2018-03-23]
+	Added devel/py-test-fixture-config version 1.3.0 [adam 2018-03-24]
+	Added devel/py-test-virtualenv version 1.3.0 [adam 2018-03-24]
+	Added devel/py-test-shutil version 1.3.0 [adam 2018-03-24]
